GNOME Bugzilla – Bug 703049
help overlay conflicts with fullscreen windows
Last modified: 2013-07-22 17:47:38 UTC
The help/configuration overlay painted over a fullscreen window makes it hidden. See bug #698641 for context.
The help overlay should be an override-redirect (GTK_TYPE_POPUP) window. That will stop the full-screen logic from kicking in.
Agreed.
Created attachment 249485 [details] [review] wacom: Make the OSD Window be a popup one This is necessary because, otherwise, showing the OSD Window on top of a fullscreen window will hide the latter. I had to explicitly grab the keyboard or else the window wouldn't get the user input (necessary to hide it when pressing Escape).
Review of attachment 249485 [details] [review]: How will this interact with other shortcuts, like Alt+Tab? ::: plugins/wacom/gsd-wacom-osd-window.c @@ +1424,3 @@ +grab_keyboard (GsdWacomOSDWindow *self) +{ + GdkDevice *device, *keyb; *kbd is better. @@ +1428,3 @@ + + gdk_window = gtk_widget_get_window (GTK_WIDGET (self)); + device = gtk_get_current_event_device (); That's useless. If you clicked on the button to show the keyboard, this will be NULL. @@ +1447,3 @@ + keyb = device; + else + keyb = gdk_device_get_associated_device (device); Run a for loop on the devices from gdk_device_manager_list_devices() and check their types instead. @@ +1457,3 @@ + GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK, + NULL, GDK_CURRENT_TIME) != GDK_GRAB_SUCCESS) { + g_warning ("Could not grab the keyboard device..."); To print that sort of thing, I'm not sure that we need to know.
Created attachment 249810 [details] [review] wacom: Make the OSD Window be a popup one New version with Bastien's suggested changes.
Review of attachment 249810 [details] [review]: Looks fine after that. ::: plugins/wacom/gsd-wacom-osd-window.c @@ +1435,3 @@ + devices = gdk_device_manager_list_devices (device_manager, GDK_DEVICE_TYPE_MASTER); + + for (l = devices; l != NULL; l = g_list_next (l)) { l = l->next @@ +1446,3 @@ + g_list_free (devices); + + if (kbd == NULL) { g_assert (kbd); it's impossible for this to happen so an assertion is in order.
Pushed. commit ff4406ccf0cd83868320ce6cbc0ad8a8b47f1cee