wacom: Make the OSD Window be a popup one

This is necessary because, otherwise, showing the OSD Window on top of
a fullscreen window will hide the latter.

https://bugzilla.gnome.org/show_bug.cgi?id=703049